1.09 Not Released

 * Add test file t/release-portability.t.

 * Add MANIFEST.SKIP file.

 * Format CHANGES according to CPAN::Changes::Spec. Add test file
   t/release-cpan-changes.t.

 * Increment version number.

1.08 2017-01-13 pjacklam

 * Change order of entries in CHANGES file (this file) to have newest entries
   at the top.

 * Avoid barewords in Makefile.PL.

 * "NAME" field in Makefile.PL must be a package name, so change "Math-Roman"
   into "Math::Roman".

 * Remove Math::BigFloat from the "PREREQ_PM" field in Makefile.PL, since
   Math::BigFloat is not used.

 * Required version of Math::BigInt is 1.35, not 1.70, so update Makefile.PL.

 * Trim whitespace. This makes 'podchecker' happy.

 * Fix POD formatting issues.

 * Add more references to CPAN in the POD.

1.07 2004-03-12 Tels

 * require Math::BigInt v1.70 (v1.45 is now rather outdated)

 * doc fix: "you define an 'IIX' token with a value of 12" should read:
   "...value of 8" (Thanx to "Martin H. Sluka")

 * add SIGNATURE

1.06 2002-04-01 Tels (not released)

 * fixed roman() (Thanx to Richard Jelinek)

 * LXL is invalid (LX == 40 and is thus smaller than L (50))

1.05 2001-11-08

 * made seperate package

1.04 2001-05-07

 * got rid of C&P in overload section

1.03 2001-04-14

 * fixed as_number() to return BigInt

1.02 2001-02-17

 * require 5_005;